--- a/app/Makefile
+++ b/app/Makefile
@@ -1,38 +1,38 @@
-bin=/web.exe
+bin=/app.exe
 dev_reload=CompileDaemon \
-					 -build="go build -o /web.exe ./main.go" \
-					 -command="/web.exe" \
+					 -build="go build -o /app.exe ./cmd/tr/main.go" \
+					 -command="/app.exe" \
 					 -pattern="(.*)\.(go|json|sql)" \
 					 -exclude-dir=./log/ \
-					 -exclude="./web.exe" \
+					 -exclude="./app.exe" \
 					 -polling=true \
 					 -polling-interval=300 \
 					 -color \
 					 -verbose
 
 dev_reload_no_pool=CompileDaemon \
-					 -build="go build -o /web.exe ./main.go" \
-					 -command="/web.exe" \
+					 -build="go build -o /app.exe ./cmd/tr/main.go" \
+					 -command="/app.exe" \
 					 -pattern="(.*)\.(go|json|sql)" \
 					 -exclude-dir=./log/ \
-					 -exclude="./web.exe" \
+					 -exclude="./app.exe" \
 					 -color \
 					 -verbose
 
 all: run
 
 run: build
-	$(bin)
+	$(bin) ./config/config.json
 
 clean:
 	rm $(bin)
 
 build:
-	go build -o $(bin) main.go
+	go build -o $(bin) ./cmd/tr/main.go
 
 dev_reload:
 	$(dev_reload)
 
 clean:
 	-rm ./log/*
-	-rm ./web.exe
+	-rm ./app.exe
