--- a/config/app/Dockerfile.prod
+++ b/config/app/Dockerfile.prod
@@ -2,6 +2,6 @@ FROM golang:1.18.4-alpine
 
 WORKDIR /app/
 
-RUN apk update && apk add make
+RUN apk update && apk add make git
 
 ENTRYPOINT ["make", "run"]
